--- a/HTML-CSS-Projects/X(Twitter)-Clone/First-Try/styles/general.css
+++ b/HTML-CSS-Projects/X(Twitter)-Clone/First-Try/styles/general.css
@@ -2,5 +2,11 @@ body {
   font-family: Verdana, Arial;
   font-size: 20px;
 
-  height: 5000px;
+  display: flex;
+  flex-direction: column;
+}
+
+html, body {
+  height: 100%;
+  border: 1px solid red;
 }
